notification theme fix + lesson add
